# sds_archive_builder

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
config/templates/: archive.yaml  network.yaml
config/templates/networks/: AM.yaml  AU.yaml  OZ.yaml  S1.yaml
scripts/: _logging.py  audit_archive.py  init_instance.py  run_backfill.py  run_daily.py  sync_inventory.py  verify_archive.py
sds_archive_builder/: __init__.py  config.py  database.py  geo_filter.py
sds_archive_builder/archive/: __init__.py  sds_query.py  sds_verify.py  sds_writer.py
sds_archive_builder/clients/: __init__.py  base.py  fdsn_client.py
sds_archive_builder/runner/: __init__.py  backfill.py  daily_update.py  inventory_sync.py
